# plate

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  TEST_SUITE_SUMMARY.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 37d1ed0daae5_initial_migration_create_users_table.py  6acc7b4fc303_make_timestamps_timezone_aware.py  cd8764615377_add_full_name_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  users.py
backend/app/core/: __init__.py  config.py  database.py  password_validator.py  rate_limit.py  security.py
backend/app/crud/: __init__.py  base.py  user.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/tests/: conftest.py  test_api_auth.py  test_api_users.py  test_crud_user.py  test_dependencies.py  test_security.py  test_utils.py
docs/: CHANGELOG.md  CLAUDE.md  Environment-Architecture.md  FRONTEND.md  FRONTEND_BUILD.md  FRONTEND_TESTING.md  RAILWAY_DEPLOYMENT.md  README.md  VERSIONING.md
frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  version.ts
frontend/src/api/: auth.ts
frontend/src/components/: ProtectedRoute.tsx
scripts/: build-images.sh  release.sh  version-bump.sh
(+19 files in other folders)
